--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuedemo",
+  "name": "vue-demo-test",
   "version": "0.0.1",
   "description": "A Vue.js project",
   "author": "jialaibin",
